<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tum_tb_perception_msgs</name>
  <version>0.1.0</version>
  <description>Custom messages for TUM euRobin taskboard solution</description>

  <author email="ahmed.abdelrahman@tum.de">Ahmed Abdelrahman</author>
  <maintainer email="ahmed.abdelrahman@tum.de">Ahmed Abdelrahman</maintainer>
  <url>https://github.com/eurobin-wp1/tum-tb-perception-msgs</url>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
